[package]
name = "ltw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ltw"
path = "src/lib.rs"

[[bin]]
name = "ltw"
path = "src/main.rs"

[dependencies]
rand = { version = "^0.8" }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["bevy_gltf"]
