[package]
name = "ltw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ltw"
path = "src/lib.rs"

[[bin]]
name = "ltw"
path = "src/main.rs"

[dependencies]
rand = { version = "^0.8" }
structopt = { version = "^0.3" }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["bevy_gltf"]

[dependencies.bevy_ggrs]
git = "https://github.com/gschup/bevy_ggrs"
branch = "main"

[dependencies.bevy_mod_picking]
git = "https://github.com/aevyrie/bevy_mod_picking"
branch = "main"

[dependencies.ggrs]
git = "https://github.com/gschup/ggrs"
branch = "main"

[patch.crates-io.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"